updatd with filter dropdown spacing issue

--- a/src/styles/my-request.css
+++ b/src/styles/my-request.css
@@ -166,8 +166,7 @@ input[type="color"][list] {
   left: 0;
   right: inherit;
   background-color: #fff;
-  width: 900px;
-  padding-top: 40px;
+  width: 1070px;
   left: -190px;
 }
 
@@ -203,8 +202,8 @@ input[type="color"][list] {
   color: #454B51;
 }
 .filterCard .footer{
-  float: right;
-  padding: 0 15px;
+    padding-top: 15px;
+    border-top:1px solid #ddd;
 }
 .filterCard .footer a,.filterCard .footer button{
 	font-family: CenturyGothic;
@@ -212,7 +211,9 @@ input[type="color"][list] {
 }
 .filterCard .footer a{
 	color: #006FB9;
-  padding-right: 25px;
+    padding-right: 25px;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .quotes-view .title .filterSection select::-ms-expand {
@@ -687,6 +688,9 @@ input[type="color"][list] {
 .filterSection .dropdown.open button{
   border-bottom: 2px solid #ed3124 !important;
   border-radius: 0;
+}
+.filterby-wrapper{
+    padding: 25px 15px 20px 0px;
 }
 @media screen and (max-width: 1100px) {
   .quotes-view .title span {
