--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,9 +75,9 @@
     }
     /*Toggle Btn*/
 
-    .toggleBtn {
+    /*.toggleBtn {
         margin: 30px 0;
-    }
+    }*/
     .toggleBtn span{
         color: #717982;
         font-family: CenturyGothic;
